--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 
         function nextLevel() {
             if (level > maxLevel) {
-                message.textContent = 'Поздравляем! Вы прошли все уровни! Пароль: hulk1488';
+                message.textContent = 'Поздравляем! Вы прошли все уровни! Пароль: negrityan';
                 return;
             }
             sequence.push(getRandomButton());
