--- a/index.html
+++ b/index.html
@@ -70,15 +70,15 @@
     <h1 id="levelText">Запомни и повтори последовательность</h1>
     <button id="startBtn">Начать</button>
     <div class="buttons-container">
-        <button class="btn" data-color="red">😃</button>
-        <button class="btn" data-color="blue">🍕</button>
-        <button class="btn" data-color="green">🏆</button>
-        <button class="btn" data-color="yellow">🎵</button>
-        <button class="btn" data-color="purple">❤️</button>
-        <button class="btn" data-color="orange">🔥</button>
-        <button class="btn" data-color="pink">🌟</button>
-        <button class="btn" data-color="cyan">🚀</button>
-        <button class="btn" data-color="gray">🎉</button>
+        <button class="btn" data-color="red">1</button>
+        <button class="btn" data-color="blue">2</button>
+        <button class="btn" data-color="green">3</button>
+        <button class="btn" data-color="yellow">4</button>
+        <button class="btn" data-color="purple">5</button>
+        <button class="btn" data-color="orange">6</button>
+        <button class="btn" data-color="pink">7</button>
+        <button class="btn" data-color="cyan">8</button>
+        <button class="btn" data-color="gray">9</button>
     </div>
     <p id="message"></p>
 
