--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             background-color: #555;
             padding: 20px;
             border-radius: 15px;
+-webkit-tap-highlight-color: transparent;
         }
         .btn {
             width: 90px;
@@ -31,7 +32,8 @@
             border-radius: 15px;
             cursor: pointer;
             border: none;
-            transition: background-color 0.3s ease;
+-webkit-tap-highlight-color: transparent;            
+transition: background-color 0.3s ease;
         }
         .btn[data-color="red"] { background-color: #e74c3c; }
         .btn[data-color="blue"] { background-color: #3498db; }
@@ -52,6 +54,7 @@
             font-size: 18px;
             padding: 10px;
             cursor: pointer;
+-webkit-tap-highlight-color: transparent;
         }
         #adminMenu {
             display: none;
