--- a/index.html
+++ b/index.html
@@ -6,72 +6,134 @@
     <title>Игра: Повтори последовательность</title>
     <style>
         body {
-          text-align: center;
-          font-family: Arial, sans-serif;
-          background-color: #7d7d7d;
-          color: white;
+            text-align: center;
+            font-family: Arial, sans-serif;
+            background-color: #2c3e50;
+            color: white;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            flex-direction: column;
         }
         .buttons-container {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-            gap: 10px;
+            display: grid;
+            grid-template-columns: repeat(3, 100px);
+            gap: 15px;
             margin-top: 20px;
-            max-width: 320px;
-            margin-left: auto;
-            margin-right: auto;
-            background-color: #555;
+            background-color: #34495e;
             padding: 20px;
-            border-radius: 15px;
--webkit-tap-highlight-color: transparent;
+            border-radius: 20px;
+            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3);
         }
         .btn {
-            width: 90px;
-            height: 90px;
+            width: 100px;
+            height: 100px;
             font-size: 25px;
+            font-weight: bold;
             border-radius: 15px;
             cursor: pointer;
             border: none;
--webkit-tap-highlight-color: transparent;            
-transition: background-color 0.3s ease;
+            color: white;
+            position: relative;
+            overflow: hidden;
+            transition: transform 0.2s ease, box-shadow 0.2s ease;
+            box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
         }
-        .btn[data-color="red"] { background-color: #e74c3c; }
-        .btn[data-color="blue"] { background-color: #3498db; }
-        .btn[data-color="green"] { background-color: #2ecc71; }
-        .btn[data-color="yellow"] { background-color: #f1c40f; }
-        .btn[data-color="purple"] { background-color: #9b59b6; }
-        .btn[data-color="orange"] { background-color: #e67e22; }
-        .btn[data-color="pink"] { background-color: #ff69b4; }
-        .btn[data-color="cyan"] { background-color: #1abc9c; }
-        .btn[data-color="gray"] { background-color: #95a5a6; }
-        
-        .active {
-            filter: brightness(1.5);
+        .btn::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: linear-gradient(45deg, rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0));
+            opacity: 0;
+            transition: opacity 0.3s ease;
+        }
+        .btn:hover::before {
+            opacity: 1;
+        }
+        .btn:active {
+            transform: scale(0.95);
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+        }
+        .btn[data-color="red"] { background: linear-gradient(45deg, #e74c3c, #c0392b); }
+        .btn[data-color="blue"] { background: linear-gradient(45deg, #3498db, #2980b9); }
+        .btn[data-color="green"] { background: linear-gradient(45deg, #2ecc71, #27ae60); }
+        .btn[data-color="yellow"] { background: linear-gradient(45deg, #f1c40f, #f39c12); }
+        .btn[data-color="purple"] { background: linear-gradient(45deg, #9b59b6, #8e44ad); }
+        .btn[data-color="orange"] { background: linear-gradient(45deg, #e67e22, #d35400); }
+        .btn[data-color="pink"] { background: linear-gradient(45deg, #ff69b4, #e84393); }
+        .btn[data-color="cyan"] { background: linear-gradient(45deg, #1abc9c, #16a085); }
+        .btn[data-color="gray"] { background: linear-gradient(45deg, #95a5a6, #7f8c8d); }
+
+        .btn.active {
+            animation: press 0.3s ease, glow 0.5s ease;
         }
 
-        #startBtn, #levelSelectBtn, #closeAdminBtn {
-            margin-top: 20px;
-            font-size: 18px;
-            padding: 10px;
-            cursor: pointer;
--webkit-tap-highlight-color: transparent;
+        @keyframes press {
+            0% { transform: scale(1); }
+            50% { transform: scale(0.95); }
+            100% { transform: scale(1); }
         }
-        #adminMenu {
+
+        @keyframes glow {
+            0% { box-shadow: 0 0 10px rgba(255, 255, 255, 0.5); }
+            50% { box-shadow: 0 0 20px rgba(255, 255, 255, 0.8); }
+            100% { box-shadow: 0 0 10px rgba(255, 255, 255, 0.5); }
+        }
+
+        #startBtn, #promoBtn, #levelSelectBtn, #closeAdminBtn, #addAttemptsBtn, #closePromoBtn, #submitPromoBtn {
+            margin: 10px;
+            font-size: 18px;
+            padding: 10px 20px;
+            cursor: pointer;
+            border: none;
+            border-radius: 10px;
+            background: linear-gradient(45deg, #3498db, #2980b9);
+            color: white;
+            box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
+            transition: transform 0.2s ease, box-shadow 0.2s ease;
+        }
+        #startBtn:active, #promoBtn:active, #levelSelectBtn:active, #closeAdminBtn:active, #addAttemptsBtn:active, #closePromoBtn:active {
+            transform: scale(0.95);
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+        }
+
+        #adminMenu, #promoMenu {
             display: none;
             position: fixed;
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
-            background-color: #444;
+            background-color: #34495e;
             padding: 20px;
-            border-radius: 10px;
+            border-radius: 15px;
+            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3);
             text-align: center;
+            color: white;
+        }
+        #adminMenu input, #promoMenu input {
+            padding: 10px;
+            border-radius: 5px;
+            border: none;
+            margin: 10px 0;
+            width: 100%;
+        }
+        #adminMenu button, #promoMenu button {
+            margin: 5px;
         }
     </style>
 </head>
 <body>
     <h1 id="levelText">Запомни и повтори последовательность</h1>
-    <button id="startBtn">Начать</button>
+    <div>
+        <button id="startBtn">Начать</button>
+        <button id="promoBtn">Промокоды</button>
+    </div>
     <div class="buttons-container">
         <button class="btn" data-color="red">1</button>
         <button class="btn" data-color="blue">2</button>
@@ -84,29 +146,61 @@ transition: background-color 0.3s ease;
         <button class="btn" data-color="gray">9</button>
     </div>
     <p id="message"></p>
+    <p id="attemptsText">Попыток осталось: 3</p>
 
     <div id="adminMenu">
         <h2>Админ-меню</h2>
         <label for="levelSelect">Выберите уровень:</label>
         <input type="number" id="levelSelect" min="1" max="30" value="1">
         <button id="levelSelectBtn">Выбрать</button>
+        <button id="addAttemptsBtn">Выдать 5 попыток</button>
         <button id="closeAdminBtn">Закрыть</button>
+    </div>
+
+    <div id="promoMenu">
+        <h2>Введите промокод</h2>
+        <input type="text" id="promoInput" placeholder="Введите промокод">
+        <button id="submitPromoBtn">Активировать</button>
+        <button id="closePromoBtn">Закрыть</button>
     </div>
 
     <script>
         const buttons = document.querySelectorAll('.btn');
         const startBtn = document.getElementById('startBtn');
+        const promoBtn = document.getElementById('promoBtn');
         const message = document.getElementById('message');
+        const attemptsText = document.getElementById('attemptsText');
         const adminMenu = document.getElementById('adminMenu');
+        const promoMenu = document.getElementById('promoMenu');
         const levelSelectBtn = document.getElementById('levelSelectBtn');
         const levelSelect = document.getElementById('levelSelect');
         const closeAdminBtn = document.getElementById('closeAdminBtn');
+        const addAttemptsBtn = document.getElementById('addAttemptsBtn');
+        const closePromoBtn = document.getElementById('closePromoBtn');
+        const submitPromoBtn = document.getElementById('submitPromoBtn');
+        const promoInput = document.getElementById('promoInput');
         const levelText = document.getElementById('levelText');
         let sequence = [];
         let playerSequence = [];
         let level = 1;
         const maxLevel = 30;
         let adminClicks = 0;
+
+        // Загрузка попыток и использованных промокодов из localStorage
+        let attempts = parseInt(localStorage.getItem('attempts')) || 3;
+        let usedPromoCodes = JSON.parse(localStorage.getItem('usedPromoCodes')) || [];
+
+        // Промокоды и их бонусы
+        const promoCodes = {
+            "SIGMA": 5,
+            "PopIt": 5,
+            "SimplDimpl": 5,
+            "Secret5": 5,
+            "Popit5": 5
+        };
+
+        // Обновление текста попыток
+        attemptsText.textContent = `Попыток осталось: ${attempts}`;
 
         function getRandomButton() {
             return buttons[Math.floor(Math.random() * buttons.length)];
@@ -128,7 +222,7 @@ transition: background-color 0.3s ease;
 
         function flashButton(button) {
             button.classList.add('active');
-            setTimeout(() => button.classList.remove('active'), 400);
+            setTimeout(() => button.classList.remove('active'), 500);
         }
 
         function startGame() {
@@ -146,18 +240,20 @@ transition: background-color 0.3s ease;
             playSequence();
         }
 
-        buttons.forEach(button => {
-            button.addEventListener('click', () => {
-                playerSequence.push(button);
-                flashButton(button);
-                checkSequence();
-            });
-        });
-
         function checkSequence() {
             if (!playerSequence.every((btn, i) => btn === sequence[i])) {
-                message.textContent = 'Ошибка! Начинаем заново...';
-                setTimeout(startGame, 1000);
+                if (attempts > 0) {
+                    attempts--;
+                    localStorage.setItem('attempts', attempts); // Сохраняем попытки
+                    attemptsText.textContent = `Попыток осталось: ${attempts}`;
+                }
+                if (attempts <= 0) {
+                    message.textContent = 'Попытки закончились! Игра начнется заново.';
+                    setTimeout(startGame, 2000); // Начинаем игру заново
+                } else {
+                    message.textContent = 'Ошибка! Попробуйте ещё раз.';
+                    playSequence(); // Повторяем последовательность
+                }
                 return;
             }
             if (playerSequence.length === sequence.length) {
@@ -168,6 +264,33 @@ transition: background-color 0.3s ease;
                 }, 1000);
             }
         }
+
+        function usePromoCode() {
+            const promo = promoInput.value.trim();
+            if (usedPromoCodes.includes(promo)) {
+                alert("Этот промокод уже использован.");
+                return;
+            }
+            if (promoCodes[promo]) {
+                attempts += promoCodes[promo];
+                usedPromoCodes.push(promo); // Добавляем промокод в список использованных
+                localStorage.setItem('attempts', attempts); // Сохраняем попытки
+                localStorage.setItem('usedPromoCodes', JSON.stringify(usedPromoCodes)); // Сохраняем промокоды
+                attemptsText.textContent = `Попыток осталось: ${attempts}`;
+                alert(`Промокод активирован! +${promoCodes[promo]} попыток.`);
+                promoInput.value = ''; // Очищаем поле ввода
+            } else {
+                alert("Неверный промокод.");
+            }
+        }
+
+        buttons.forEach(button => {
+            button.addEventListener('click', () => {
+                playerSequence.push(button);
+                flashButton(button);
+                checkSequence();
+            });
+        });
 
         levelText.addEventListener('click', () => {
             adminClicks++;
@@ -183,9 +306,26 @@ transition: background-color 0.3s ease;
             adminMenu.style.display = 'none';
         });
 
+        addAttemptsBtn.addEventListener('click', () => {
+            attempts += 5;
+            localStorage.setItem('attempts', attempts); // Сохраняем попытки
+            attemptsText.textContent = `Попыток осталось: ${attempts}`;
+            alert("Добавлено 5 попыток!");
+        });
+
         closeAdminBtn.addEventListener('click', () => {
             adminMenu.style.display = 'none';
         });
+
+        promoBtn.addEventListener('click', () => {
+            promoMenu.style.display = 'block';
+        });
+
+        closePromoBtn.addEventListener('click', () => {
+            promoMenu.style.display = 'none';
+        });
+
+        submitPromoBtn.addEventListener('click', usePromoCode);
 
         startBtn.addEventListener('click', startGame);
     </script>
