--- a/index.html
+++ b/index.html
@@ -5,11 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Игра: Повтори последовательность</title>
     <style>
-  /* Основные стили */
         body {
             text-align: center;
-            font-family: 'Orbitron', sans-serif;
-            background: radial-gradient(ellipse, #0f0c29, #302b63, #24243e);
+            font-family: Arial, sans-serif;
+            background-color: #2c3e50;
             color: white;
             margin: 0;
             padding: 0;
@@ -18,44 +17,34 @@
             align-items: center;
             height: 100vh;
             flex-direction: column;
-          
         }
-        h1 {
-            font-size: 2.5rem;
+      h1 {
+            font-size: 2rem;
             font-weight: bold;
-            color: #00ffcc;
+            color: #fff;
             margin-bottom: 20px;
-            text-shadow: 0 0 10px #00ffcc, 0 0 20px #00ffcc;
-            animation: glowText 5s infinite alternate;
-        }
-
-        p {
+      }
+      p {
             font-size: 1.5rem;
             font-weight: bold;
-            color: #00ffcc;
+            color: #fff;
             margin-bottom: 10px;
-            text-shadow: 0 0 5px #00ffcc;
+      }
+        .buttons-container {
+            display: grid;
+            grid-template-columns: repeat(3, 120px);
+            gap: 15px;
+            margin-top: 20px;
+            background: rgba(255, 255, 255, 0.1);
+            padding: 25px;
+            border-radius: 20px;
+            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3);
+            backdrop-filter: blur(10px);
         }
-.buttons-container {
-    display: grid;
-    grid-template-columns: repeat(3, 111px);
-    gap: 20px;
-    margin: 20px auto 0; /* Центрируем контейнер по горизонтали */
-    background: rgba(255, 255, 255, 0.1);
-    padding: 10px;
-    border-radius: 20px;
-    backdrop-filter: blur(10px);
-    box-shadow: 0 0 20px rgba(255, 0, 13, 0.5);
-    justify-content: center; /* Центрируем кнопки внутри контейнера */
-    place-items: center; /* Дополнительное центрирование */
-    max-width: 100%; /* Ограничиваем ширину контейнера */
-    width: fit-content; /* Ширина контейнера подстраивается под содержимое */
-}
-
         .btn {
-            width: 100px;
-            height: 100px;
-            font-size: 25px;
+            width: 120px;
+            height: 120px;
+            font-size: 30px;
             font-weight: bold;
             border-radius: 20px;
             cursor: pointer;
@@ -64,10 +53,10 @@
             position: relative;
             overflow: hidden;
             transition: transform 0.2s ease, box-shadow 0.2s ease;
-            box-shadow: 0 0 10px rgba(0, 255, 204, 0.5);
-            background: rgba(255, 255, 255, 0.1);
+            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+            -webkit-tap-highlight-color: transparent;
+            transform-style: preserve-3d;
         }
-
         .btn::before {
             content: '';
             position: absolute;
@@ -75,26 +64,23 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background: linear-gradient(45deg, rgba(0, 255, 204, 0.3), rgba(0, 255, 204, 0));
+            background: linear-gradient(45deg, rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0));
             opacity: 0;
             transition: opacity 0.3s ease;
         }
-
         .btn:hover::before {
             opacity: 1;
         }
-
         .btn:active {
-            transform: scale(0.95);
-            box-shadow: 0 0 15px rgba(0, 255, 204, 0.8);
+            transform: scale(0.95) translateZ(10px);
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
         }
-
-        .btn[data-color="red"] { background: linear-gradient(45deg, #ff416c, #ff4b2b); }
-        .btn[data-color="blue"] { background: linear-gradient(45deg, #00b4db, #0083b0); }
-        .btn[data-color="green"] { background: linear-gradient(45deg, #00ffcc, #00ccaa); }
-        .btn[data-color="yellow"] { background: linear-gradient(45deg, #ffd700, #ffaa00); }
+        .btn[data-color="red"] { background: linear-gradient(45deg, #e74c3c, #c0392b); }
+        .btn[data-color="blue"] { background: linear-gradient(45deg, #3498db, #2980b9); }
+        .btn[data-color="green"] { background: linear-gradient(45deg, #2ecc71, #27ae60); }
+        .btn[data-color="yellow"] { background: linear-gradient(45deg, #f1c40f, #f39c12); }
         .btn[data-color="purple"] { background: linear-gradient(45deg, #9b59b6, #8e44ad); }
-        .btn[data-color="orange"] { background: linear-gradient(45deg, #ff7e5f, #feb47b); }
+        .btn[data-color="orange"] { background: linear-gradient(45deg, #e67e22, #d35400); }
         .btn[data-color="pink"] { background: linear-gradient(45deg, #ff69b4, #e84393); }
         .btn[data-color="cyan"] { background: linear-gradient(45deg, #1abc9c, #16a085); }
         .btn[data-color="gray"] { background: linear-gradient(45deg, #95a5a6, #7f8c8d); }
@@ -104,62 +90,54 @@
         }
 
         @keyframes press {
-            0% { transform: scale(1); }
-            50% { transform: scale(0.95); }
-            100% { transform: scale(1); }
+            0% { transform: scale(1) translateZ(0); }
+            50% { transform: scale(0.95) translateZ(10px); }
+            100% { transform: scale(1) translateZ(0); }
         }
 
         @keyframes glow {
-            0% { box-shadow: 0 0 10px rgba(0, 255, 204, 0.5); }
-            50% { box-shadow: 0 0 20px rgba(0, 255, 204, 0.8); }
-            100% { box-shadow: 0 0 10px rgba(0, 255, 204, 0.5); }
-        }
-
-        @keyframes glowText {
-            0% { text-shadow: 0 0 10px #00ffcc, 0 0 20px #00ffcc; }
-            100% { text-shadow: 0 0 20px #00ffcc, 0 0 40px #00ffcc; }
+            0% { box-shadow: 0 0 10px rgba(255, 255, 255, 0.5); }
+            50% { box-shadow: 0 0 20px rgba(255, 255, 255, 0.8); }
+            100% { box-shadow: 0 0 10px rgba(255, 255, 255, 0.5); }
         }
 
         #startBtn, #promoBtn, #levelSelectBtn, #closeAdminBtn, #addAttemptsBtn, #closePromoBtn, #submitPromoBtn {
             margin: 10px;
             font-size: 20px;
-            padding: 15px 30px;
+            padding: 20px 20px;
             cursor: pointer;
             border: none;
             border-radius: 15px;
-            background: linear-gradient(45deg, #00ffcc, #00ccaa);
+            background: linear-gradient(45deg, #3498db, #2980b9);
             color: white;
-            box-shadow: 0 0 10px rgba(0, 255, 204, 0.5);
+            box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
             transition: transform 0.2s ease, box-shadow 0.2s ease;
+            -webkit-tap-highlight-color: transparent;
         }
-
         #startBtn:active, #promoBtn:active, #levelSelectBtn:active, #closeAdminBtn:active, #addAttemptsBtn:active, #closePromoBtn:active {
             transform: scale(0.95);
-            box-shadow: 0 0 15px rgba(0, 255, 204, 0.8);
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
         }
-
-        #adminMenu, #promoMenu {
+ #adminMenu, #promoMenu {
             display: none;
             position: fixed;
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
-            background: rgba(0, 0, 0, 0.8);
+            background: rgba(52, 73, 94, 0.9);
             padding: 25px;
             border-radius: 20px;
-            backdrop-filter: blur(10px);
-            box-shadow: 0 0 20px rgba(0, 255, 204, 0.5);
+            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3);
             text-align: center;
             color: white;
+            backdrop-filter: blur(10px);
+   z-index: 999999999999;
         }
-
         #adminMenu h2, #promoMenu h2 {
             font-size: 2rem;
             margin-bottom: 15px;
-            color: #00ffcc;
-            text-shadow: 0 0 10px #00ffcc;
+            color: white;
         }
-
         #adminMenu input, #promoMenu input {
             padding: 10px;
             border-radius: 10px;
@@ -169,23 +147,46 @@
             background: rgba(255, 255, 255, 0.1);
             color: white;
             font-size: 16px;
+            -webkit-tap-highlight-color: transparent;
         }
-
         #adminMenu button, #promoMenu button {
             margin: 5px;
-            padding: 10px 20px;
-            border-radius: 10px;
-            border: none;
-            background: linear-gradient(45deg, #00ffcc, #00ccaa);
-            color: white;
-            cursor: pointer;
-            transition: transform 0.2s ease, box-shadow 0.2s ease;
+            -webkit-tap-highlight-color: transparent;
         }
+      #adminMenu input {
+    padding: 10px;
+    border-radius: 10px;
+    border: none;
+    margin: 10px 0;
+    width: 60%; /* Уменьшаем ширину поля ввода */
+    background: rgba(255, 255, 255, 0.1);
+    color: white;
+    font-size: 16px;
+    -webkit-tap-highlight-color: transparent;
+}
 
-        #adminMenu button:active, #promoMenu button:active {
-            transform: scale(0.95);
-            box-shadow: 0 0 15px rgba(0, 255, 204, 0.8);
-        }
+#adminMenu button {
+    margin: 5px;
+    padding: 10px 20px;
+    border-radius: 10px;
+    border: none;
+    background: linear-gradient(45deg, #3498db, #2980b9);
+    color: white;
+    cursor: pointer;
+    transition: transform 0.2s ease, box-shadow 0.2s ease;
+}
+
+#adminMenu button:active {
+    transform: scale(0.95);
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+}
+
+#adminMenu div {
+    display: flex;
+    gap: 10px;
+    align-items: center;
+    margin-bottom: 15px;
+}
     </style>
 </head>
 <body>
